# portal.vv.backend

./: .env.example  .gitignore  Cargo.toml  render.yaml
.sqlx/: query-0052475248bdc3758b620331b8cdbaaeb71049c23a2be2a9f6bbcc85a193bb2b.json  query-0743e8e78252189032b96d86718b61be69a2103e23804b11df7fffa41400fa65.json  query-076299289e445e3774b53dc1e810e2ce1858bb65825093bc55eec06e76f5e1e0.json  query-0a4c61852bed015e6128e0809f8ebf87d2226588c3bc9fcddc02beae5289b275.json  query-0aa0845425b704ed7b68ae48c015ed803dfbbcda873789600243fff273bde6aa.json  query-0e6893f97e0b6bbdfeb4ebffe6d3dc5701b7401fa1445662aad317e1fedfed95.json  query-0fdd80fc59b36abe67957e7f5d0c58df988b1f5182268c731d4379e0ec7f680d.json  query-1340ac94fd096c46671b3b3f5edb258287b2845b2cdab8c3004e1630d049ca39.json  query-13b2a0417615935a3f01729821e0cf7701a8f45c2e3f916d2f834211c51747f3.json  query-13be23f13baa25dee87916f9ce3675aa1a77ecea9ccc3b4df5d419775f2f5b66.json  query-1667531ab07af6b78973c48306167315a66bdef10203925d811f1573a9d764be.json  query-16d933e0f98bb5b6e89da1f9bacd05f239c751b863898646aa966d3ea4a85758.json  query-16f50971c98d90a02e0ef6fd2847b42f0b1242865cbb9b6481b8f546e0a2a91e.json  query-17fc0efe9922ddb07dbc7965ff6d5bc0792d613a18592b5adc6707c57aafbbf3.json  query-1899106fd9176f2df4b343ef6360031dd16b193e5fb10818b88196b076f8120e.json  query-192261d438996cc3b6d896d0d73c00e6f436434392311c96a40c3d1cf2d56d22.json  query-1da1f9fc36811c24c231fd896587c5626518cf2c4752fc2f9813afff4873d55d.json  query-1e3875baef4b685e23124ae822b5da461c82e6a466b5a18df211273a5a402a7a.json  query-1f45f519bd501fe9313cfbd2c4a0517988b2b19a412b0ad34373aa46862d3c43.json  query-1f50f51d7c55388a0a859c09c3c6f3ff75e7130224a3cd5c9a43598e99185e1a.json  (+105 more)
src/: config.rs  (+1 more)
(+229 files in other folders)
