[package]
name = "fms"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fms"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-governor = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Async traits
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
    "rust_decimal",
    "migrate"
] }

# Auth / JWT
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Decimal (AED money)
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"

# Date / Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Env / Config
dotenvy = "0.15"

# HTTP client (Resend API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Password hashing
argon2 = "0.5"

# Token generation
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"

# CSV
csv = "1"

# PDF generation
printpdf = "0.7"

# CLI subcommands
clap = { version = "4", features = ["derive", "env"] }

# OpenAPI
utoipa = { version = "4", features = ["actix_extras", "uuid", "chrono", "decimal"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
